Updated all the files

--- a/template/emp_image.html
+++ b/template/emp_image.html
@@ -6,7 +6,7 @@
 <html lang="en"> 
 <head> 
     <meta charset="UTF-8"> 
-    <title>Digital Image Processing Project</title> 
+    <title>Digital Image Processing </title> 
 </head> 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
