--- a/template/emp_image_display.html
+++ b/template/emp_image_display.html
@@ -2,12 +2,12 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <!DOCTYPE html>
-<html lang="en"> 
-<head> 
+<html>
+<head>
     <meta charset="UTF-8"> 
-    <title>Display of Image</title> 
+    <title>Displaying Image</title> 
+    <link rel="stylesheet" href="{% static '/home/css/styles.css' %}">
 </head>
-
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
         <div class="container-fluid">
@@ -30,10 +30,17 @@
           </div>
         </div>
       </nav>
-    <h1>Image Processing Operation  - {{emp.name}}</h1>
-    <img src="{{emp.emp_image.url}}" alt="Smiley face" width="250" height="250">
+    <h1 class="main-header">Image Processing Operation  - {{emp.name}}</h1>
+    <img class="main-img" src="{{emp.emp_image.url}}" alt="Smiley face" width="250" height="250">
     <br/>
 
+    <div class="img-description">
+      <h3 class="main-header">Output Image</h3>
+      <h3 class="main-header"><i>Short Explanation</i></h3>
+      <p class="main-para">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi aliquid illo tenetur molestiae quod! Optio illum illo nulla vero? Commodi temporibus tempora praesentium? Nemo dolor voluptates aspernatur, ad optio accusantium?
+      </p>
+    </div>
     <!-- Inbuilt function code -->
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
@@ -82,7 +89,7 @@
       </div>
 
       <br/>
-      <a href="{% url 'home' %}">Go Back!!!</a>
+      <a class="main-link btn btn-primary" href="{% url 'home' %}">Return to HomePage</a>
   
 </body>
 
