--- a/template/emp_image_display.html
+++ b/template/emp_image_display.html
@@ -7,6 +7,10 @@
     <meta charset="UTF-8">
     <title>Displaying Image</title>
     <link rel="stylesheet" href="{% static '/home/css/styles.css' %}">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/styles/default.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/highlight.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
@@ -110,9 +114,164 @@
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              {% if emp.name == "GrayScale" %}
+              <pre><code class="python" style="text-align: left;">
+import cv2
+
+# GrayScale function
+def grayscale(image):
+    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)
+    return gray_image
+
+# Example usage of GrayScale function
+image = cv2.imread('image.jpg')
+gray_image = grayscale(image)
+cv2.imshow('Gray Image', gray_image)
+cv2.waitKey(0)
+              </code></pre>
+              {% elif emp.name == "Color" %}
+              <pre><code class="python" style="text-align: left;">
+import cv2
+
+# Color function
+def color(image):
+    color_image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)
+    return color_image
+
+# Example usage of Color function
+image = cv2.imread('image.jpg')
+color_image = color(image)
+cv2.imshow('Color Image', color_image)
+cv2.waitKey(0)
+              </code></pre>
+              {% elif emp.name == "Blur" %}
+              <pre><code class="python" style="text-align: left;">
+import cv2
+
+def blur(img, kernel_size=(5,5)):
+    blur = cv2.GaussianBlur(img, kernel_size, 0)
+    return blur
+
+# Example usage
+img = cv2.imread('image.jpg')
+blur_img = blur(img, kernel_size=(9,9))
+cv2.imshow('Blurred Image', blur_img)
+cv2.waitKey(0)
+
+              </code></pre>
+              {% elif emp.name == "Noise ( Gaussian )" %}
+              <pre><code class="python" style="text-align: left;">
+import cv2
+import numpy as np
+
+def gaussian_noise(img, mean=0, var=0.01):
+    h, w, c = img.shape
+    sigma = var ** 0.5
+    noise = np.random.normal(mean, sigma, (h, w, c))
+    noisy_img = img + noise
+    noisy_img = np.clip(noisy_img, 0, 255)
+    noisy_img = noisy_img.astype(np.uint8)
+    return noisy_img
+
+# Example usage
+img = cv2.imread('image.jpg')
+noisy_img = gaussian_noise(img, mean=0, var=0.1)
+
+              </code></pre>
+              {% elif emp.name == "Noise ( Salt and Pepper )" %}
+              <pre><code class="python" style="text-align: left;">
+import cv2
+import numpy as np
+
+def salt_and_pepper_noise(img, prob=0.01):
+    h, w, c = img.shape
+    noise = np.zeros((h, w), dtype=np.float32)
+    thres = 1 - prob
+    for i in range(h):
+        for j in range(w):
+            rdn = np.random.rand()
+            if rdn < prob:
+                noise[i][j] = 0
+            elif rdn > thres:
+                noise[i][j] = 1
+            else:
+                noise[i][j] = img[i][j]
+    noisy_img = cv2.convertScaleAbs(noise, alpha=255)
+    return noisy_img
+
+# Example usage
+img = cv2.imread('image.jpg')
+noisy_img = salt_and_pepper_noise(img, prob=0.05)
+cv2.imshow('Noisy Image', noisy_img)
+cv2.waitKey(0)
+
+              </code></pre>
+              {% elif emp.name == "Resizing ( 512 x 512 )" %}
+              <pre><code class="python" style="text-align: left;">
+import cv2
+
+def resize_512(img):
+    resized_img = cv2.resize(img, (512, 512))
+    return resized_img
+
+# Example usage
+img = cv2.imread('image.jpg')
+resized_img = resize_512(img)
+cv2.imshow('Resized Image', resized_img)
+cv2.waitKey(0)
+
+              </code></pre>
+              {% elif emp.name == "Resizing ( 16 x 16 )" %}
+              <pre><code class="python" style="text-align: left;">
+import cv2
+
+def resize_opencv(img_path, output_size):
+    img = cv2.imread(img_path)
+    img_resized = cv2.resize(img, output_size)
+    cv2.imshow("Resized Image", img_resized)
+    cv2.waitKey(0)
+    cv2.destroyAllWindows()
+
+# Example usage
+resize_opencv("image.jpg", (16, 16))
+
+              </code></pre>
+              {% elif emp.name == "Contrast ( 0-255 )" %}
+              <pre><code class="python" style="text-align: left;">
+
+              </code></pre>
+              {% elif emp.name == "Contrast ( 0-15 )" %}
+              <pre><code class="python" style="text-align: left;">
+
+              </code></pre>
+              {% elif emp.name == "Contrast ( 0-1 )" %}
+              <pre><code class="python" style="text-align: left;">
+
+              </code></pre>
+              {% elif emp.name == "Rotation ( 15 degrees )" %}
+              <pre><code class="python" style="text-align: left;">
+
+              </code></pre>
+              {% elif emp.name == "Rotation ( 45 degrees )" %}
+              <pre><code class="python" style="text-align: left;">
+
+              </code></pre>
+              {% elif emp.name == "Rotation ( 90 degrees )" %}
+              <pre><code class="python" style="text-align: left;">
+
+              </code></pre>
+              {% elif emp.name == "Rotation ( 180 degrees )" %}
+              <pre><code class="python" style="text-align: left;">
+
+              </code></pre>
+              {% elif emp.name == "Histogram Equalization" %}
+              <pre><code class="python" style="text-align: left;">
+
+              </code></pre>
+              {% endif %}
             </div>
           </div>
+
         </div>
       </div>
       <!-- User-defined code -->
